<resources>
    <string name="app_name">WifiDemo</string>
    <string name="create_hostspot">创建WIFI热点</string>
    <string name="close_hostspot">关闭WIFI热点</string>
    <string name="send_data">发送数据</string>
    <string name="change_password">修改密码</string>
    <string name="search">搜索WIFI</string>
    <string name="show_passwork">显示密码</string>
    <string name="btn_ok">确认</string>
    <string name="btn_cancel">取消</string>
</resources>
