<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zjf.wifidemo.MainActivity">

    <Button
        android:id="@+id/btn_create_hostspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hostspot"/>
    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"/>
    <Button
        android:id="@+id/btn_close_hostspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_hostspot"/>
</LinearLayout>
